--- a/src/main/resources/templates/viewEnquiries.html
+++ b/src/main/resources/templates/viewEnquiries.html
@@ -240,7 +240,7 @@
 							tableBody += '<td>' + (index + 1) + '</td>';
 							tableBody += '<td>' + item.studentName + '</td>';
 							tableBody += '<td>' + item.course + '</td>';
-							tableBody += '<td>' + item.studentNo + '</td>';
+							tableBody += '<td>' + item.contactNo + '</td>';
 							tableBody += '<td>' + item.enquiryDate + '</td>';
 							tableBody += '<td>' + item.enquiryStatus + '</td>';
 							tableBody += '<td>' + item.classMode + '</td>';
